commit tree d33d0f747781c739c05807ee0ae3ed313d980544

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
 <!-- Write your code here! -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Introduction to the DOM Lab</title>
+</head>
+<body>
+    <h1>My HTML adventure</h1>
+    <p>
+        Random random <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a> markup to display in our <strong>browser</strong>. We're
+        instructing the computer <em>Neat!</em> 
+    </p>
+    <table>
+        <tr>
+            <th>Obar3</th>
+        </tr>
+    </table>
+</body>
+</html>
